log
Tue Mar  2 00:45:22 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c = a + b;
      ^
cc1: all warnings being treated as errors
Compilation failed
Tue Mar  2 00:45:32 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
f826713
